style.css
/* ... */
.box-avis:hover {
    box-shadow: 7px 10px 20px rgba(0, 0, 0, 0.414);
    transition: all 0.5s linear;
}

.fa-check-circle {
    color: rgb(91, 233, 15);
}

.star-grey {
    color: rgb(192, 185, 185);
}

.p-avis {
    font-size: 12px;
    color: rgb(135, 129, 129);
    padding: 5px 5px;
}

.avis-commentaire {
    padding-left: 17px;
}

.des-avis {
    color: grey;
}

.icon-a {
    padding-bottom: 10px;
    color: yellow;
}

.img-avis img {
    width: 50px;
    border-radius: 50%;

}

.container {
    padding-top: 50px;
}

/* Tablet */
@media(min-width:768px) and (max-width:991px) {
    header {
        flex-direction: column;
        padding: 2rem 0px;
        height: auto;
    }

    ul li:last-child {
        display: none;
    }

    #acceuil {
        position: relative;

    }

    .image {
        position: absolute;
        display: flex;
        justify-content: center;
        align-items: center;
        margin-left: 200px;

        img {
            opacity: 0.5;
        }
    }

    .texte {
        position: absolute;
        z-index: 10;
    }

    .cont-apropos {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
    }

    .sous-titre {
        padding-top: 70px;
    }

    /* #btn {
        flex-wrap: wrap;
    } */

    .btn {
        display: flex;
        flex-direction: column;
    }

    .box-valeur {
        width: 300px;
        height: 200px;
    }

    .cont-avis {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        gap: 1rem;
    }

    .total-avis {
        width: 200px;
        height: 200px;
    }

    .note-avis {
        width: 80%;
    }

    .box-avis {
        width: 350px;
        height: 200px;
        gap: 0.5rem;
    }

    .logo {
        padding-bottom: 30px;
    }

    /* .contactts{
        display: none;
    } */
}

/* Mobile */
@media(max-width:766px) {
    .ul-nav li {
        display: none;
    }

    .image {
        display: none;
    }

    .ul-nav li:last-child {

        display: block;
    }

    .listeNav li:last-child {
        display: none;
    }

    header {
        padding: 0 50px;
    }

    .listeNav {
        flex-direction: column;
        text-align: center;
        margin-top: 5rem;
    }

    .slide {
        width: 300px;
    }

    .cont-apropos {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
    }

    .sous-titre {
        padding-top: 70px;
        font-size: 25px;
    }

    .img-apropos {
        min-width: 25rem;
        height: 20rem;
    }

    .back-img {
        min-width: 24rem;
        height: 18rem;
    }

    .btn-tous {
        display: flex;
        justify-content: center;
        align-items: center;
        gap: 10px;
        flex-wrap: wrap;
    }

    .btn-filtre {
        display: block;
    }

    .btn {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
    }

    .fontPara {
        font-size: 14px;
    }

    .total-avis {
        width: 200px;
        height: 200px;
    }

    .cont-avis {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        gap: 1rem;
    }

    .note-avis {
        width: 80%;
        height: 300px;

    }

    .box-avis {
        width: 350px;
        height: 200px;
        gap: 0.5rem;
    }

    #boiteInscription {
        width: 450px;
    }

    #boiteConnexion {
        width: 450px;
    }

    .inputInscription {
        height: 30px;
        width: 300px;
        padding-left: 10px;
    }

    .name {
        width: 200px;
        height: 30px;
    }

    .num {
        width: 200px;
        height: 30px;
    }

    .subscrb {
        width: 100px;
        height: 35px;
    }

    .btts {
        height: 35px;
        width: 70px;
    }
    .iconnes{
        font-size: 10px;
    }

    /* .contactts{
        display: none;
    } */
}

/* Desktop */
@media(min-width:992px) and (max-width:1199px) {
    ul li:last-child {
        display: none;
    }
}

/* Extra Large Devices  */
@media(min-width:1200px) {
    ul li:last-child {
        display: none;
    }
}

